vault/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: vault
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.cluster.com`)
      kind: Rule
      services:
        - name: vault-internal
          port: 8200
          scheme: https
          serversTransport: vault-transport 
          namespace: vault
  tls:
    secretName: ingress-local-cert 
    options:
      name: vault-tls-option       # ⬅️ (optional) TLS options reference
      namespace: vault
